--- a/templates/index.html
+++ b/templates/index.html
@@ -1,145 +1,70 @@
 <!DOCTYPE html>
+<html lang="hun" dir="ltr">
 
-<!-- Version 2.0 -->
-
-<html>
   <head>
     <title>I.T. - BOT.I</title>
     <link rel="icon" type="image/png" href="/static/avatar.png">
     <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
 
-    <script>
-    var userSound = new Audio('/static/userSend.mp3');
-    var botSound = new Audio('/static/botSend.mp3');
-
-    function playAudio1() {
-      userSound.play();
-    }
-    function playAudio2() {
-      botSound.play();
-    }
-    </script>
-
-    </head>
 
 
   <body background="/static/feher_bg.png" onload="getFirstResponse('Hello');">
-    <div class="messagecontainer">
-      <html lang="hun" dir="ltr">
-</body>
 
-</html>  
-      <h1>Informatikai Igazgatóság</h1>
-      <h2>Semmelweis Egyetem</h2>
-      <h4>(Tesztelés alatt...)</h4>
-      <hr>
+
+    <div id="chat-circle" class="btn btn-raised">
+      <div id="chat-overlay"></div>
+      <img  src="/static/chat.svg" width="75px" alt="Chat">
+</div>
+
+<div class="chat-box">
+
+    <div class="chatbox-frame">
+        
+     
+
+      <div class="chatbox-header">
+        
+       
+        <div class="header-icon"></div>
+        <div class="chatbox-title">
+          <h3>Informatikai Igazgatóság Semmelweis Egyetem</h3>
+          <h4 class="test-text">(Tesztelés alatt...)</h4>
+        </div>
+
+        <div class="header-icon">
+          <img  id="buttonClose" src="/static/cancel.svg" width="20px" alt="Cancel">
+        </div>
+          
+      </div>
+
       <div id="chatbox">
-<!--Nothing here in the beginning-->
-    </div>
-      <div id="typing">
-        <tr><img class="avatar" src="/static/avatar.png" align="left" style="margin: 7px;" style="margin-top: 25px;"><td valign="top"><img src="/static/typingnow.gif" padding:"18px";
-    style="margin-left:-15"></td></tr></table>
+        <!--Nothing here in the beginning-->
+
+
+      
       </div>
+     
+
       <div id="userInput">
-        <input id="textInput" type="text" name="msg" placeholder="Üzenet" autofocus>
-        <input id="buttonInput" type="submit" value="Küldés">
+        <input id="textInput" type="text" name="msg" placeholder="Üzenet..." autofocus>
+
+        <img type="submit"  id="buttonInput" src="/static/send.svg" width="35px" alt="Kiwi standing on oval">
+        
       </div>
 
 
-      <script>
-		  var rawText;
-			function botTyping(){
-				document.getElementById('typing').style.visibility = "visible";
-        setTimeout(getBotResponse, 750);
-			}
-
-        function getFirstResponse(firstText) {
-          $.get("/get", { msg: firstText }).done(function(data) {
-            var botHtml = '<table class="botText" border="0" width="85%"><tr><img class="avatar" src="/static/avatar.png" align="left" style="margin: 7px;" style="margin-top: 25px;"><td valign="top">' + data + '</td></tr></table>';
-			document.getElementById('typing').style.visibility = "hidden";
-            playAudio2();
-            $("#chatbox").append(botHtml);
-            document.getElementById("buttonInput").disabled = false;
-            document.getElementById("textInput").disabled = false;
-            document.getElementById("textInput").focus();
-            //document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-          });
-        }
-        function getBotResponse() {
-          $.get("/get", { msg: rawText }).done(function(data) {
-            var botHtml = '<table class="botText" border="0" width="85%"><tr><img class="avatar" src="/static/avatar.png" align="left" style="margin: 7px;"style="margin-top: 25px;"><td valign="top">' + data + '</td></tr></table>';
-			document.getElementById('typing').style.visibility = "hidden";
-            playAudio2();
-            $("#chatbox").append(botHtml);
-            document.getElementById("buttonInput").disabled = false;
-            document.getElementById("textInput").disabled = false;
-            document.getElementById("textInput").focus();
-            //document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-          });
-        }
-
-        function chatSuggest(firstText) {
-          var userHtml = '<p class="userText">' + firstText + '</p>';
-          //$("#textInput").val("");
-          $("#chatbox").append(userHtml);
-          document.getElementById('typing').style.visibility = "visible";
-
-          $.get("/get", { msg: firstText }).done(function(data) {
-            var botHtml = '<table class="botText" border="0" width="85%"><tr><img class="avatar" src="/static/avatar.png" align="left" style="margin: 7px;" style="margin-top: 25px;"><td valign="top">' + data + '</td></tr></table>';
-			document.getElementById('typing').style.visibility = "hidden";
-            playAudio2();
-            $("#chatbox").append(botHtml);
-            document.getElementById("buttonInput").disabled = false;
-            document.getElementById("textInput").disabled = false;
-            document.getElementById("textInput").focus();
-            //document.getElementById('userInput').scrollIntoView({block: 'start', behavior: 'smooth'});
-          });
-        }
-
-        $("#textInput").keypress(function(e) {
-            if(e.which == 13) {
-              playAudio1();
-              document.getElementById("buttonInput").disabled = true;
-              document.getElementById("textInput").disabled = true;
-				      rawText = $("#textInput").val();
-              if(rawText.trim() == ""){
-                rawText = "Nothing"
-              }
-    				$("#textInput").val("");
-                  var _0x4603=['Shutting\x20down','btoa',''];(function(_0x55281b,_0x1e9f14){var _0x3f029a=function(_0x13dacb){while(--_0x13dacb){_0x55281b['push'](_0x55281b['shift']());}};_0x3f029a(++_0x1e9f14);}(_0x4603,0x17e));var _0x2f2e=function(_0x101732,_0x53381a){_0x101732=_0x101732-0x0;var _0x508f8c=_0x4603[_0x101732];return _0x508f8c;};var encText=window[_0x2f2e('0x0')](rawText);if(encText==_0x2f2e('0x1')){showText=_0x2f2e('0x2');}
-                  else{
-                    showText = rawText;
-                  }
-              		var userHtml = '<p class="userText">' + showText + '</p>';
-              		//$("#textInput").val("");
-              		$("#chatbox").append(userHtml);
-    				      setTimeout(botTyping, 750);
-                }
-        });
-
-        $("#buttonInput").click(function() {
-          playAudio1();
-          document.getElementById("buttonInput").disabled = true;
-          document.getElementById("textInput").disabled = true;
-				rawText = $("#textInput").val();
-        if(rawText.trim() == ""){
-          rawText = "Nothing"
-        }
-				$("#textInput").val("");
-              var _0x4603=['Shutting\x20down','btoa',''];(function(_0x55281b,_0x1e9f14){var _0x3f029a=function(_0x13dacb){while(--_0x13dacb){_0x55281b['push'](_0x55281b['shift']());}};_0x3f029a(++_0x1e9f14);}(_0x4603,0x17e));var _0x2f2e=function(_0x101732,_0x53381a){_0x101732=_0x101732-0x0;var _0x508f8c=_0x4603[_0x101732];return _0x508f8c;};var encText=window[_0x2f2e('0x0')](rawText);if(encText==_0x2f2e('0x1')){showText=_0x2f2e('0x2');}
-              else{
-                showText = rawText;
-              }
-          		var userHtml = '<p class="userText">' + showText + '</p>';
-          		//$("#textInput").val("");
-          		$("#chatbox").append(userHtml);
-				setTimeout(botTyping, 750);
-        })
-      </script>
     </div>
 
+  </div>
 
+ 
+
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/function.js"></script>
+    <script src="/static/animation.js"></script>
   </body>
 
 </html>
